# rtype_mirror

./: .gitignore  .gitmodules  CMakeLists.txt
Frameworks/: libSILLY.dylib  libexpat.dylib  libfreetype.dylib  libglew.dylib  libglfw.dylib  libjpeg.dylib  libpcre.dylib  libpng.dylib  libzlib.dylib
Project/: main.cpp
Project/rtype/api/: CMakeSources.cmake  Player.hpp  rtype-api.cpp  rtype-api.hpp
Project/rtype/audio/: CMakeSources.cmake  SoundManager.cpp  SoundManager.hpp
Project/rtype/components/: CMakeSources.cmake  Components.hpp
Project/rtype/config/: CMakeLists.txt  CMakeSources.cmake  Configuration.cpp  Configuration.hpp  ConfigurationBase.hpp  ConfigurationMacros.hpp  CreateConfig.cpp  CreateConfig.hpp  ErrorConfig.cpp  ErrorConfig.hpp  GameConfig.cpp  GameConfig.hpp  InGameConfig.cpp  InGameConfig.hpp  LoadingConfig.hpp  LobbyConfig.hpp  LoginConfig.cpp  LoginConfig.hpp  PlayerConfig.cpp  PlayerConfig.hpp  ProfilConfig.cpp  ProfilConfig.hpp  QueueConfig.hpp  SpaceshipConfig.cpp  SpaceshipConfig.hpp
Project/rtype/core/: CMakeSources.cmake  Game.cpp  Game.hpp  SafeCEGUI.hpp  World.hpp
Project/rtype/entity/: CMakeSources.cmake  Components.hpp  ECS.hpp  EntityManager.hpp  GameFactory.cpp  GameFactory.hpp
Project/rtype/error/: CMakeSources.cmake  RTypeError.cpp  RTypeError.hpp
Project/rtype/gameobject/: GameObject.hpp
Project/rtype/gui/: BaseGUI.hpp  BaseGui.hpp  CMakeSources.cmake  GUIManager.cpp  GUIManager.hpp  GuiManager.cpp  GuiManager.hpp
Project/rtype/gutils/: CMakeSources.cmake
Project/rtype/gutils/base/: AScene.hpp  BaseSystem.hpp
Project/rtype/gutils/event/: InsideEvents.hpp
Project/rtype/gutils/manager/: EventManager.hpp  SystemManager.hpp
Project/rtype/lua/: CMakeSources.cmake  LuaManager.hpp
Project/rtype/netproto/: CMakeLists.txt  CMakeSources.cmake  ClientIOThread.hpp  IOThread.hpp  TCPProtocolConnection.hpp  WeakCallback.hpp
Project/rtype/protocol/: CMakeSources.cmake  Game.hpp  GamePackets.hpp  MatchMaking.hpp  Packets.hpp  Protocol.hpp
Project/rtype/scenario/: Action.hpp  CMakeSources.cmake  Scenario.hpp  ScenarioAction.hpp  ScenarioSystem.hpp
Project/rtype/scenes/: CMakeSources.cmake  CreateScene.cpp  CreateScene.hpp  DemoScene.cpp  DemoScene.hpp  EnumScenes.hpp  GameScene.cpp  GameScene.hpp  IntroScene.cpp  IntroScene.hpp  LoadingScene.hpp  LobbyScene.cpp  LobbyScene.hpp  LoginScene.cpp  LoginScene.hpp  ProfilScene.cpp  ProfilScene.hpp  QueueScene.cpp  QueueScene.hpp  SceneManager.hpp
Project/rtype/scenes/private/: ForwardEnumCreate.hpp  ForwardEnumInGame.hpp  ForwardEnumLoading.hpp  ForwardEnumLobby.hpp  ForwardEnumLogin.hpp  ForwardEnumProfil.hpp  ForwardEnumQueue.hpp  ForwardGameSceneUtils.hpp  GameSettings.hpp
Project/rtype/systems/: CMakeSources.cmake  CollisionSystem.hpp  FieldSystem.hpp  GameFieldSystem.hpp  SAudio.hpp  SCollision.hpp  SEvents.hpp  SGui.hpp  SScenes.hpp  SVideo.hpp  Systems.hpp  SystemsEnum.hpp
Project/rtype/utils/: Action.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  Animation.cpp  Animation.hpp  CMakeSources.cmake  DemoUtils.hpp  QuadTree.hpp  ResourceManager.hpp  Timer.hpp
Project/rtype/video/: CMakeSources.cmake  VideoManager.cpp  VideoManager.hpp
scripts/: build.bat  build.sh  debug_build.ps1  generate-game.sh  install_rtype_linux_dependancies.sh  jenkins-build.ps1  jenkins-build.sh  new_test.sh  release_build.ps1  script.bash  windows-build.sh
test/: CMakeLists.txt
test/components/: CMakeLists.txt  components-test.cpp
test/ecs/: CMakeLists.txt  ecs-test.cpp
test/game-object/: CMakeLists.txt  game-object-test.cpp
test/lua/: CMakeLists.txt  lua-test.cpp
test/protocol/: CMakeLists.txt  protocol-test.cpp
test/quadtree/: CMakeLists.txt  quadtree-test.cpp
test/scenario/: CMakeLists.txt  scenario-test.cpp
